sg_httpsaccess.tf
resource "aws_security_group" "HTTPSaccess" {
  ingress {
    cidr_blocks = ["0.0.0.0/0"]
    from_port   = 443
    to_port     = 443
    protocol    = "tcp"
  }
}
